# piscine_python

./: .gitignore  README.md
ForDataScience/Python_0_Starting/ex09/: LICENSE  README.md  main.py  pyproject.toml
PythonModule00/ex4/: ft_water_reminder.py
PythonModule00/ex5/: ft_count_harvest_iterative.py
PythonModule00/ex6/: ft_garden_summary.py
PythonModule00/ex7/: ft_seed_inventory.py
PythonModule01/ex0/: ft_garden_intro.py
PythonModule01/ex1/: ft_garden_data.py
PythonModule01/ex2/: ft_plant_growth.py
PythonModule01/ex3/: ft_plant_factory.py
PythonModule01/ex6/: ft_garden_analytics.py  subject.txt
PythonModule02/: ft_first_exception.py
PythonModule02/ex3/: ft_finally_block.py
PythonModule02/ex5/: ft_garden_management.py
PythonModule03/ex0/: ft_command_quest.py  ft_score_analytics.py
PythonModule03/ex1/: ft_score_analytics.py
PythonModule03/ex2/: ft_coordinate_system.py
PythonModule03/ex3/: ft_achievement_tracker.py
PythonModule03/ex6/: ft_analytics_dashboard.py
PythonModule04/data-generator-tools/: sample_data.json
PythonModule04/ex1/: ft_archive_creation.py
PythonModule04/ex4/: ft_crisis_response.py
PythonModule05/ex0/: stream_processor.py
PythonModule05/ex1/: data_stream.py
PythonModule05/ex2/: nexus_pipeline.py
Python_Module_00/ex0/: ft_hello_garden.py
Python_Module_00/ex1/: ft_plot_area.py
Python_Module_00/ex2/: ft_harvest_total.py
Python_Module_00/ex3/: ft_plant_age.py
Python_Module_00/ex4/: ft_water_reminder.py
Python_Module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
(+35 files in other folders)
