[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "un exemple de paquet de test"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Herimamy12", email = "nherimam@student.42antananarivo.mg" }
]

[project.urls]
homepage = "https://github.com/Herimamy12/piscine_python/tree/main/ForDataScience/Python_0_Starting"

[tool.setuptools.packages.find]
include = ["ft_package*"]
